# OP_Lab_17

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/string/tasks/: string_.c  string_.h
